# mkdocs-search-links-plugin

./: .gitignore  MANIFEST.in  README.md  build.sh  mkdocs.yml  setup.cfg  test-offline-build.sh
docs/example-pages/: duplicate.md  no-listings.md  python-cheat-sheet.md  sbilly-awesome-security.md  weird-listings.md  with-title.md
docs/plugin/: all-links.md  all-listings.md  index.md  inline-listing-search.md  inline-search.md  link-search.md  listing-search.md
src/mkdocs_search_links_plugin/: __init__.py  all_links_page.py  all_listings_page.py  default.css  html_parser.py  listing-search.js  page_processor.py  search_page.py
