[metadata]
name = mkdocs-search-links-plugin
version = 0.1.0
author = six-two
author_email = pip@six-two.dev
description = Create a page that contains all of your listings and/or a search function for listings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-search-links-plugin
license = MIT License
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
install_requires =
    mkdocs>=1.5.0 # Needed for mkdocs.plugins.get_plugin_logger
    beautifulsoup4

[options.entry_points]
mkdocs.plugins =
    search_links = mkdocs_search_links_plugin:ListingsPlugin

[options.packages.find]
where = src
